# simppl

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/object_manager/: object_manager.cpp
include/simppl/: objectpath.h  serverside.h  skeleton.h  skeletonbase.h
scripts/: build.sh
src/: skeletonbase.cpp  util.cpp
tests/: CMakeLists.txt  multi_interface.cpp
